Atualizei o DTO para um record, criei operacoes 'transacao' e 'recebimento' para o pix service, e reformulei a logica para as transacoes