@@ -4,23 +4,36 @@ import me.dri.SistemaPix.models.Cliente;
 import me.dri.SistemaPix.models.dto.ClienteDTO;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class ConverterEntity {
 
 
-    public static ClienteDTO convertyEntityToDTO(Cliente cliente) {
-        ClienteDTO clienteDTO = new ClienteDTO();
-        clienteDTO.setId(cliente.getId());
-        clienteDTO.setNome(cliente.getNome());
-        clienteDTO.setEmail(cliente.getEmail());
-        clienteDTO.setChave_pix(cliente.getChavePix());
-        clienteDTO.setSaldo(cliente.getSaldo());
-        clienteDTO.setBanco(cliente.getBanco());
+
+    public static ClienteDTO convertyEntityToDTO2(Cliente cliente) {
+        ClienteDTO clienteDTO = new ClienteDTO(
+                cliente.getId(),
+                cliente.getNome(),
+                cliente.getSobrenome(),
+                cliente.getEmail(),
+                cliente.getCpf(),
+                cliente.getSenha(),
+                cliente.getChavePix(),
+                cliente.getSaldo());
         return clienteDTO;
     }
 
-    public static List<ClienteDTO> convertyListToDTO(List<Cliente> clientes) {
-        List<ClienteDTO> clienteDTOList = clientes.stream().map(ConverterEntity::convertyEntityToDTO).toList();
-        return clienteDTOList;
+    public static List<ClienteDTO> convertityListToDTO2(List<Cliente> clienteList) {
+        return clienteList.stream().map(cliente -> new ClienteDTO(
+                cliente.getId(),
+                cliente.getNome(),
+                cliente.getSobrenome(),
+                cliente.getEmail(),
+                cliente.getCpf(),
+                cliente.getSenha(),
+                cliente.getChavePix(),
+                cliente.getSaldo())
+        ).collect(Collectors.toList());
     }
+
 }
